--- a/Cirkus1/Cirkus/App.config
+++ b/Cirkus1/Cirkus/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <connectionStrings>
-    <add name ="db" connectionString="server=94.254.23.225;port=52030; user id=cirkuskul;Password=kulcirkus;database=cirkus " providerName="Npgsql" />
+    <add name ="db" connectionString="server=webblabb.miun.se;port=5432; user id=db_g6;Password=sommar;database=db_g6 " providerName="Npgsql" />
     
   </connectionStrings>
 </configuration>
