--- a/Cirkus1/Cirkus/Cirkus.csproj
+++ b/Cirkus1/Cirkus/Cirkus.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Träningsgrupp.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="Cirkusmedlem.cs">
       <SubType>Form</SubType>
