--- a/Cirkus1/Cirkus/Cirkus.csproj
+++ b/Cirkus1/Cirkus/Cirkus.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Cirkusträningsgrupp.Designer.cs">
       <DependentUpon>Cirkusträningsgrupp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Nyträningsgrupp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Nyträningsgrupp.Designer.cs">
+      <DependentUpon>Nyträningsgrupp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Träningsgrupp.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="Cirkusmedlem.cs">
@@ -84,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cirkusträningsgrupp.resx">
       <DependentUpon>Cirkusträningsgrupp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Nyträningsgrupp.resx">
+      <DependentUpon>Nyträningsgrupp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
