--- a/Cirkus1/Cirkus/Cirkus.csproj
+++ b/Cirkus1/Cirkus/Cirkus.csproj
@@ -33,9 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Npgsql, Version=3.1.2.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\tillfällig\Downloads\npgsql\Npgsql.dll</HintPath>
+    <Reference Include="Npgsql">
+      <HintPath>..\..\..\..\..\Documents\npgsql\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -56,6 +55,18 @@
     </Compile>
     <Compile Include="Cirkusträningsgrupp.Designer.cs">
       <DependentUpon>Cirkusträningsgrupp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CirkusNärvaror.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CirkusNärvaror.Designer.cs">
+      <DependentUpon>CirkusNärvaror.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cirkusupdatemedlem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cirkusupdatemedlem.Designer.cs">
+      <DependentUpon>Cirkusupdatemedlem.cs</DependentUpon>
     </Compile>
     <Compile Include="Nyträningsgrupp.cs">
       <SubType>Form</SubType>
@@ -90,6 +101,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cirkusträningsgrupp.resx">
       <DependentUpon>Cirkusträningsgrupp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CirkusNärvaror.resx">
+      <DependentUpon>CirkusNärvaror.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Cirkusupdatemedlem.resx">
+      <DependentUpon>Cirkusupdatemedlem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Nyträningsgrupp.resx">
       <DependentUpon>Nyträningsgrupp.cs</DependentUpon>
