Ny class, ej klar

--- a/Cirkus1/Cirkus/Cirkus.csproj
+++ b/Cirkus1/Cirkus/Cirkus.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ansvar.cs" />
     <Compile Include="CirkusNytträningstillfälle.cs">
       <SubType>Form</SubType>
     </Compile>
