--- a/Cirkus1/Cirkus/Cirkus.csproj
+++ b/Cirkus1/Cirkus/Cirkus.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ansvar.cs" />
+    <Compile Include="Antaldeltagare.cs" />
     <Compile Include="CirkusNytträningstillfälle.cs">
       <SubType>Form</SubType>
     </Compile>
